# diablo-project

assets/mjcf/open_ai_assets/hand/: joint_names_323Assembase_limit3.yaml
assets/urdf/323Assembase_limit3/: CMakeLists.txt  package.xml
assets/urdf/323Assembase_limit3/launch/: display.launch  gazebo.launch
assets/urdf/323Assembase_limit3/meshes/: head_pan_Link.STL  head_tilt_Link.STL  l_el_Link.STL  l_index_base_Link.STL  l_index_middle_Link.STL  l_index_tip_Link.STL  l_mid_base_Link.STL  l_mid_middle_Link.STL  l_mid_tip_Link.STL  l_sho_pitch_Link.STL  l_sho_roll_Link.STL  l_thumb_base_Link.STL  l_thumb_middle_Link.STL  l_thumb_tip_Link.STL  l_wrist_Link.STL  r_el_Link.STL  r_index_base_Link.STL  r_index_middle_Link.STL  r_index_tip_Link.STL  r_mid_base_Link.STL  r_mid_middle_Link.STL  r_mid_tip_Link.STL  r_sho_pitch_Link.STL  r_sho_roll_Link.STL  r_thumb_base_Link.STL  r_thumb_middle_Link.STL  r_thumb_tip_Link.STL  r_wrist_Link.STL
assets/urdf/323Assembase_limit3/urdf/: 323Assembase_limit3.csv
python/examples/: ball_balance.py  ball_balance2.py  joint_monkey.py
runs/AnymalTerrain_20-21-56-52/: config.yaml
runs/OP3_20-21-38-36/: config.yaml
runs/OP3_20-21-41-14/: config.yaml
runs/OP3_20-21-45-17/: config.yaml
runs/OP3_20-22-05-06/: config.yaml
runs/OP3_20-22-14-42/: config.yaml
runs/OP3_20-22-15-10/: config.yaml
runs/OP3_20-22-16-26/: config.yaml
runs/OP3_20-22-17-03/: config.yaml
runs/OP3_20-22-17-22/: config.yaml
runs/OP3_20-22-18-08/: config.yaml
runs/OP3_20-22-28-21/: config.yaml
runs/OP3_20-22-56-05/: config.yaml
(+1 files in other folders)
